manifests/overlays/development/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dk8sdemo
  namespace: django-k8s-demo
  labels:
    app: dk8sdemo
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: dk8ksdemo
  template:
    metadata:
      labels:
        pod: dk8ksdemo
    spec:
      containers:
        - name: dk8sdemo
          image: pasiol/dk8sdemo@sha256:7098e917de56b9c945f25a2636c2bb185612ab81e38822ce33efc39cbf139f3c
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 8000
