manifests/overlays/development/django/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: django-service
  namespace: django-k8s-demo
spec:
  selector:
    pod: dk8ksdemo
  ports:
    - protocol: TCP
      targetPort: 8000
      port: 8000
  type: LoadBalancer
