manifests/overlays/development/django/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-k8s-ingress
  namespace: django-k8s-demo
spec:
  rules:
  #- host: django-k8s-demo.local
    http:
      paths:
      - path: /container-info
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
  ingressClassName: nginx
